# Distributed-Log-Service-With-C-

./: .gitignore  5ra  CMakeLists.txt  Delayed To Know Why  Makefile  README.md  Why Questions  comman.cmake  exc  index  main.cpp  o  store  which
Notes&Questions/: Bustub View.txt  Commands Used  Delayed To Know Why  Don't Forget.txt  HowQuestions  SecurityRevision.txt  Why Questions  cmakeRelated.txt
api/v1/: log.pb.cc  log.pb.h  log.proto  logprog.pb.cc  logprog.pb.h  logprog.proto
experimentFiles/: ConditionVars.cpp  bufferWriter.cpp  changeFileSize.cpp  producer_consumer  test.cpp
include/disk/: File.h
include/handler/: handler.h
include/index/: index.h
include/log/: config.h  log.h
include/membership/: membership.h
include/replicator/: replicator.h
include/runnable/: runnable.h
include/segment/: segment.h
include/server/: client.h  server.h
include/store/: store.h
logsData/: 0.index  0.store  1.index  1.store
logsData2/: 0.store
serf-cpp/: Serf Commands.txt  build.sh  logs.txt  programOut.txt
serf-cpp/example/: CMakeLists.txt  SerfAgentExample.cpp  SerfClientExample.cpp  agentFork.cpp
serf-cpp/include/serf-cpp/: Config.h  ISerfListener.h  SerfAgent.h
serf-cpp/src/: ISerfListener.cpp  SerfChannel.cpp  SerfChannel.h  SerfClient.cpp  SerfIoThread.h  SerfMsgStructs.cpp
serf-cpp/tests/: Listeners.cpp  Listeners.h  SerfIoThreadTests.cpp
src/: CMakeLists.txt
src/disk/: File.cpp
src/index/: index.cpp
src/log/: log.cpp
src/membership/: membership.cpp
src/replicator/: replicator.cpp
src/runnable/: runnable.cpp
src/segment/: segment.cpp
src/server/: client.cpp  client_runner.cpp  replicator.cpp  server.cpp  server_runner.cpp
src/store/: store.cpp
test/: CMakeLists.txt
test/disk/: File_test.cpp
test/grpc/: grpc_test.cpp  replicator_test.cpp
test/index/: index_test.cpp
test/log/: log_test.cpp
test/segment/: segment_test.cpp
test/store/: store_test.cpp
